@@ -31,15 +31,18 @@ import org.apache.camel.impl.DefaultMessage;
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf;
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf.DetectionRequest.VideoRequest;
 import org.mitre.mpf.wfm.camel.operations.detection.DetectionContext;
+import org.mitre.mpf.wfm.data.entities.persistent.Media;
 import org.mitre.mpf.wfm.data.entities.transients.Detection;
 import org.mitre.mpf.wfm.data.entities.transients.Track;
-import org.mitre.mpf.wfm.data.entities.persistent.Media;
-import org.mitre.mpf.wfm.util.TimePair;
+import org.mitre.mpf.wfm.util.MediaRange;
+import org.mitre.mpf.wfm.util.UserSpecifiedRangesUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+
+import static java.util.stream.Collectors.toList;
 
 @Component(VideoMediaSegmenter.REF)
 public class VideoMediaSegmenter implements MediaSegmenter {
@@ -51,34 +54,39 @@ public class VideoMediaSegmenter implements MediaSegmenter {
     public List<Message> createDetectionRequestMessages(
             Media media, DetectionContext context) {
         if (context.isFirstDetectionTask()) {
-            return createTimePairMessages(
-                    media, context, Collections.singletonList(new TimePair(0, media.getLength() - 1)));
+            Set<MediaRange> framesToProcess = UserSpecifiedRangesUtil.getCombinedRanges(media);
+            // Process each range separately to prevent createMediaRangeMessages from filling
+            // gaps between user specified ranges.
+            return framesToProcess.stream()
+                    .map(tp -> createMediaRangeMessages(media, context, List.of(tp)))
+                    .flatMap(Collection::stream)
+                    .collect(toList());
         }
         else if (MediaSegmenter.feedForwardIsEnabled(context)) {
             return createFeedForwardMessages(media, context);
         }
         else {
-            List<TimePair> trackTimePairs = MediaSegmenter.createTimePairsForTracks(context.getPreviousTracks());
-            return createTimePairMessages(media, context, trackTimePairs);
+            List<MediaRange> trackMediaRanges = MediaSegmenter.createRangesForTracks(context.getPreviousTracks());
+            return createMediaRangeMessages(media, context, trackMediaRanges);
         }
     }
 
+    private static List<Message> createMediaRangeMessages(
+            Media media, DetectionContext context, Collection<MediaRange> trackMediaRanges) {
 
-    private static List<Message> createTimePairMessages(
-            Media media, DetectionContext context, Collection<TimePair> trackTimePairs) {
-
-        List<TimePair> segments = MediaSegmenter.createSegments(
-                trackTimePairs,
+        List<MediaRange> segments = MediaSegmenter.createSegments(
+                trackMediaRanges,
                 context.getSegmentingPlan().getTargetSegmentLength(),
                 context.getSegmentingPlan().getMinSegmentLength(),
                 context.getSegmentingPlan().getMinGapBetweenSegments());
 
         List<Message> messages = new ArrayList<>(segments.size());
-        for(TimePair segment : segments) {
+        for(MediaRange segment : segments) {
             assert segment.getStartInclusive() >= 0
                     : String.format("Segment start must always be GTE 0. Actual: %d", segment.getStartInclusive());
             assert segment.getEndInclusive() >= 0
                     : String.format("Segment end must always be GTE 0. Actual: %d", segment.getEndInclusive());
+
             log.debug("Creating segment [{}, {}] for {}.",
                       segment.getStartInclusive(), segment.getEndInclusive(), media.getId());
 
